results/SpecGenBench/2-shot/log-JewelsInStones-2023_11_06_01_59_43.txt
class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0;
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining 0 <= jewelsCount && jewelsCount <= i;
        //@ maintaining (\forall int k; 0 <= k && k < i; !contains(jewels, stones.charAt(k))) ==> jewelsCount == \old(jewelsCount);
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining (\forall int k; 0 <= k && k < j; !contains(jewels, stones.charAt(i))) ==> jewelsCount == \old(jewelsCount);
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        
        return jewelsCount;
    }
    
    //@ requires str != null;
    //@ requires 0 <= i && i < str.length();
    //@ ensures \result == true <==> (\exists int k; 0 <= k && k < str.length(); str.charAt(k) == c);
    public boolean contains(String str, char c) {
        for (int i = 0; i < str.length(); i++) {
            if (str.charAt(i) == c) {
                return true;
            }
        }
        return false;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:10: warning: A non-pure method is being called where it is not permitted: JewelsInStones.contains(java.lang.String,char)
        //@ maintaining (\forall int k; 0 <= k && k < i; !contains(jewels, stones.charAt(k))) ==> jewelsCount == \old(jewelsCount);
                                                                  ^
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:10: error: cannot find symbol
        //@ maintaining (\forall int k; 0 <= k && k < i; !contains(jewels, stones.charAt(k))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                      ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:16: warning: A non-pure method is being called where it is not permitted: JewelsInStones.contains(java.lang.String,char)
            //@ maintaining (\forall int k; 0 <= k && k < j; !contains(jewels, stones.charAt(i))) ==> jewelsCount == \old(jewelsCount);
                                                                      ^
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:16: error: cannot find symbol
            //@ maintaining (\forall int k; 0 <= k && k < j; !contains(jewels, stones.charAt(i))) ==> jewelsCount == \old(jewelsCount);
                                                                                                                          ^
  symbol:   variable jewelsCount
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:31: error: cannot find symbol
    //@ requires 0 <= i && i < str.length();
                      ^
  symbol:   variable i
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:31: error: cannot find symbol
    //@ requires 0 <= i && i < str.length();
                           ^
  symbol:   variable i
  location: class JewelsInStones
4 errors
2 warnings

